[gd_scene load_steps=2 format=3 uid="uid://cja5e0rev0h5n"]

[ext_resource type="Script" path="res://source/game/hud/ActionDisplay/ActionDisplay.gd" id="1_exhdg"]

[node name="ActionDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exhdg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 127.0
offset_bottom = 26.0

[node name="DefendLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_right = 57.0
offset_bottom = 26.0
text = "Defend"

[node name="AttackLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_left = 61.0
offset_right = 127.0
offset_bottom = 26.0
text = "Advance"

[node name="CancelLabel" type="Label" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 127.0
offset_bottom = 56.0
text = "Cancel"
horizontal_alignment = 1
